# mscclpp

.azure-pipelines/: multi-nodes-test.yml
apps/nccl/: CMakeLists.txt
apps/nccl/src/: nccl.cu
apps/nccl/test/: CMakeLists.txt  README.md
apps/nccl/test/src/: api_test.cpp  common.cpp  common.hpp
src/: context.cc  registered_memory.cc
src/include/: context.hpp
